ghost-site/01-new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drivetester
    app.kubernetes.io/component: drivetester
    app.kubernetes.io/instance: drivetester
    app.kubernetes.io/name: drivetester
    app.kubernetes.io/part-of: drivetester
    app.openshift.io/runtime-namespace: drivetester
  name: drivetester
  namespace: drivetester
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: drivetester
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: drivetester
        deploymentconfig: drivetester
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: drivetester-content-env
        image: docker.io/ghost:5.8.2
        imagePullPolicy: Always
        name: drivetester
        ports:
        - containerPort: 2368
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: drivetester-content
      - envFrom:
        - secretRef:
            name: drivetester-db-env
        image: mysql:8.0
        name: db
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: drivetester-db
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: drivetester-content
        persistentVolumeClaim:
          claimName: drivetester-content
      - name: drivetester-db
        persistentVolumeClaim:
          claimName: drivetester-db
