ghost-site/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: drivetester
    app.kubernetes.io/component: drivetester
    app.kubernetes.io/instance: drivetester
    app.kubernetes.io/name: drivetester
    app.kubernetes.io/part-of: drivetester
    app.openshift.io/runtime-version: latest
  name: drivetester
  namespace: drivetester
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-drivetest
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app: drivetester
    deploymentconfig: drivetester
    version: v1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
